<resources>
    <string name="app_name">Base MVVM</string>
    <string name="back">back</string>
    <string name="button">Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_button">Demo Button</string>
    <string name="press_to_open_dialog_fragment">Press to open dialog fragment</string>
    <string name="demo_fragment">This is the demo fragment</string>
    <string name="fragmet_2">FRAGMENT 2</string>
    <string name="view_coroutine_scope">VIEW_COROUTINE_SCOPE_TAG</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_network_available">No network available</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="file_not_selected">File not selected</string>
    <string name="file_not_supported">File not supported</string>
    <string name="upload_photo">Upload photo</string>
    <string name="retry">Retry</string>
    <string name="lbl_move_up_or_down">Move up or down</string>
    <string name="lbl_double_tap_to_dismiss">double tap to dismiss</string>
    <string name="lbl_to">to</string>
    <string name="ok_label">OK</string>
    <string name="error_label">Error</string>

    <string name="device_rooted">Device is rooted. Application will not work.</string>
    <string name="device_is_in_debug">Device is in debug mode. Application will not work.</string>
    <string name="reverse_engineering_detected">Reverse engineering tools detected. Application will not work.</string>
    <string name="emulator_detected">Emulator detected. Application will not work.</string>

    <string name="biometric_dialog_title">Biometric login for my app</string>
    <string name="biometric_dialog_subtitle">Log in using your biometric credential</string>
    <string name="biometric_dialog_negative_button">Use account password</string>
    <string name="this_is_the_response">This is the response</string>
    <string name="call_login">Call login</string>
    <string name="call_register">Call Register</string>
    <string name="call_logout">Call Logout</string>
    <string name="type_here_your_password">Type here your password</string>
    <string name="type_here_your_username">Type here your username</string>
    <string name="call_forgot_password">Call forgot password</string>
    <string name="call_get_roles">Call get roles</string>
    <string name="call_edit_role">Call edit role</string>
    <string name="role_id">Role id</string>
    <string name="logout_call">Logout call</string>

    <string name="lbl_app_update_title">App Update</string>
    <string name="lbl_app_update_message">An update has just been downloaded, you need to restart the application for the update to take effect</string>
    <string name="lbl_restart">Restart</string>
</resources>